--- a/content/artist-landing-page.mdx
+++ b/content/artist-landing-page.mdx
@@ -1,6 +1,4 @@
-﻿import BannerV2 from '../src/components/banner.js'
-
-<Container>
+﻿<Container>
 
 <BannerV2 bgOverlay="transparent" children="&nbsp;" />
 
